# SAGE-Predeployer

./: LICENSE  README.md  main.py  pyproject.toml  run.sh
input/BoreasTests/: testa.json  testb.json  testc.json  testd.json
input/K8sTests/: BatchTest.json  NodeTest.json
input/LegacyExamples/: Oryx2.json  SecureBillingEmail.json  SecureWebContainer.json  WordPress3.json  WordPress8.json
output/boreas/: scheduler.yaml
output/boreas/BoreasTests/testa-boreas/: simple.yaml
output/boreas/BoreasTests/testb-boreas/: balder.yaml  freyja.yaml  nerthus.yaml  skadi.yaml
output/boreas/BoreasTests/testc-boreas/: 1_balder.yaml  2_freyja.yaml  3_nerthus.yaml  4_skadi.yaml
output/boreas/BoreasTests/testd-boreas/: 1_asperitas.yaml  2_cirrus.yaml  3_cumulus.yaml  4_nimbus.yaml  5_stratus.yaml
output/boreas/CustomTests/BatchTest/: 1_comp1.yaml  2_comp2.yaml  3_comp3.yaml
output/boreas/CustomTests/NodeTest/: 1_comp1.yaml  2_comp2.yaml  3_comp3.yaml
output/boreas/LegacyExamples/Oryx 2/: 10_spark-historyservice.yaml  1_kafka.yaml  2_zookeeper.yaml  3_hdfs-namenode.yaml  4_hdfs-secondarynamenode.yaml  5_hdfs-datanode.yaml  6_yarn-resourcemanagement.yaml  7_yarn-historyservice.yaml  8_yarn-nodemanager.yaml  9_spark-worker.yaml
output/boreas/LegacyExamples/SecureBillingEmail/: 1_coding-service.yaml  2_security-manager.yaml  3_gateway.yaml  4_sqlserver.yaml  5_loadbalancer.yaml
src/: config.py  infra_manager.py  processor.py
src/models/: component.py  network.py  restrictions.py  vm.py
templates/: deployment.yaml.j2  raw_deployment.yaml.j2
(+102 files in other folders)
